<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_text"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/acc_name_input"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_text"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/acc_name_input_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_name_input"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/acc_input_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="100dp"
            android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acc_input_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_toEndOf="@+id/acc_input_cancel"
            android:text="@string/ok"
            app:cornerRadius="100dp" />
    </RelativeLayout>


</RelativeLayout>