<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/countdown_timer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".WorkDetailsActivity">

            <cn.iwgang.countdownview.CountdownView
                android:id="@+id/countdown_timer_view"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/timer_background"
                app:isHideTimeBackground="true"
                app:isShowDay="true"
                app:isShowHour="true"
                app:isShowMillisecond="true"
                app:isShowMinute="true"
                app:isShowSecond="true"
                app:isTimeTextBold="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023"
                app:suffixDay="D"
                app:suffixGravity="bottom"
                app:suffixHour="H"
                app:suffixMillisecond="ms"
                app:suffixMinute="M"
                app:suffixSecond="S"
                app:suffixTextColor="#F6F1F1"
                app:suffixTextSize="12sp"
                app:timeTextColor="#F6F0F0"
                app:timeTextSize="30sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/account_name_card_view"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="164dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/countdown_timer_view"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/countdown_timer_view"
                app:layout_constraintTop_toBottomOf="@+id/countdown_timer_view"
                app:layout_constraintVertical_bias="0.055">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/account_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="261dp"
                        android:text="@string/account_name"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/account_name_text_view"
                        android:layout_width="342dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="286dp"
                        android:layout_marginBottom="14dp"
                        android:text="Fiverr"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/account_name_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_work_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/green"
                android:backgroundTintMode="src_over"
                android:elevation="5dp"
                android:text="@string/confirm_job"
                app:cornerRadius="100dp"
                app:icon="@drawable/ic_baseline_check_24"
                app:iconGravity="end"
                app:iconPadding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/delete_work_button"
                app:layout_constraintEnd_toEndOf="@+id/cardView4"
                app:layout_constraintStart_toStartOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/cardView4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_work_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/red"
                android:backgroundTintMode="src_over"
                android:elevation="5dp"
                android:text="@string/delete_job"
                app:cornerRadius="100dp"
                app:icon="@drawable/ic_baseline_delete_forever_24"
                app:iconGravity="end"
                app:iconPadding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/confirm_work_button"
                app:layout_constraintStart_toStartOf="@+id/confirm_work_button"
                app:layout_constraintTop_toBottomOf="@+id/confirm_work_button" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.722"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/amount_paid_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="271dp"
                        android:text="@string/amount_paid"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/amount_paid_text_view"
                        android:layout_width="342dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="287dp"
                        android:layout_marginBottom="22dp"
                        android:text="Ksh. 5000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/amount_paid_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/writer_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="273dp"
                        android:text="@string/writer_name"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/writer_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="302dp"
                        android:layout_marginBottom="19dp"
                        android:text="Zaweria"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/writer_name_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="121dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/account_name_card_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/account_name_card_view"
                app:layout_constraintTop_toBottomOf="@+id/account_name_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/job_description_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="255dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/job_description"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/job_description_text_view"
                        android:layout_width="347dp"
                        android:layout_height="81dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="35dp"
                        android:text="jforjforjfojr frnofrnofnronfor ofnornfonr essay   by dmdmodmcodmcomdcmdomcdm odcodcodncodnc odcnodncodncodnc snosnxosnxosx sonosncosnc nconconscosnc "
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/job_description_text"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/delete_work_button"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/cardView3"
                app:layout_constraintVertical_bias="0.0" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/writer_earning_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="262dp"
                        android:text="@string/writer_earning"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/writer_earning_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="289dp"
                        android:layout_marginBottom="17dp"
                        android:text="Ksh. 1000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/writer_earning_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>